Added Veräjä subtheme

--- a/config.ini
+++ b/config.ini
@@ -8,8 +8,9 @@ style_sheet.options.multiOptions.spring = "Spring"
 style_sheet.options.multiOptions.summer = "Summer"
 style_sheet.options.multiOptions.autumn = "Autumn"
 style_sheet.options.multiOptions.winter = "Winter"
+style_sheet.options.multiOptions.veraja = "Veräjä"
 style_sheet.options.multiOptions.night = "Night"
-style_sheet.options.value = "winter"
+style_sheet.options.value = "veraja"
 
 logo.type = "file"
 logo.options.label = "Logo File"
